# thrasio_iq_fullstack

./: .gitignore  README.md  debug_logger.py  pyrightconfig.json
docs/: Enterprise_Multi_Agent_System_Research.md  project_structure.md  tech_stack.md
docs/deployment/: agent1_LangGraph设计.md  agent1_bigquery_tools.md  agent1_details.md  agent1_plan.md
docs/development/: agent1.md
docs/knowledge/: Thrasio_IQ需求文档.md  agent_vs_workflow.md  final_project_structure.md  gemini_vs_claude_vibe_coding.md  google-cloud-bigquery-v3.34.0-analysis_by_tavily.md  nspb.md  项目目录方案1.md
services/worker/: .env.example  CLAUDE.md  README.md  README_CLI.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_test_agent.sh  test_imports.py
services/worker/.claude/: settings.local.json
services/worker/app/: __init__.py  bigquery_config_template.json  cli.py
services/worker/app/agents/: __init__.py  base_agent.py  data_analysis_agent.md  data_analysis_agent.py  state.py  test_get_all_datasets_of_project.py  test_langgraph_agent.py  workflow_nodes.py  workflow_nodes_part2.py
services/worker/app/core/: __init__.py  config.py  exceptions.py  logging.py
services/worker/app/memory/: external_memory.py
services/worker/app/prompts/: analysis_prompts.py
services/worker/app/tools/bigquery/: __init__.py  client.py  dataset_explorer.py  query_builder.py  query_executor.py  schema_manager.py
services/worker/app/tools/looker/: __init__.py  client.py  dashboard_manager.py  visualization.py
services/worker/app/tools/test/: check_dbt_tables.py  test_query_executor.py
services/worker/app/workflows/: __init__.py  data_analysis_workflow.py
services/worker/tests/: test_config.py
