[project]
name = "thrasio-iq-worker"
version = "1.0.0"
description = "Thrasio IQ Worker Service"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.7.0",
    "structlog==25.4.0",
    "python-dotenv==1.0.1",
    
    # AI and ML dependencies
    "langgraph==0.4.8",
    "langchain==0.3.26",
    "langchain-core==0.3.66",
    "langchain-google-vertexai==2.0.26",
    "pydantic-ai==0.0.17",
    "llama-index==0.12.9",
    "langsmith==0.4.1",
    
    # Google Cloud dependencies
    "google-cloud-bigquery==3.27.0",
    "google-auth==2.37.0",
    "google-cloud-storage==2.19.0",
    "google-cloud-logging==3.12.0",
    
    # Database dependencies
    "sqlalchemy==2.0.41",
    "db-dtypes==1.3.0",
    
    # Other dependencies
    "requests==2.32.3",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "jinja2==3.1.5",
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "tenacity==8.5.0",
    "tiktoken==0.9.0",
    "openai==1.91.0",
    "anthropic==0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true